--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,8 @@
         "psr-4": {
           "Barberry\\": "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^4.8"
     }
 }
