--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,13 @@
             "email": "mgnatenko@gmail.com"
         }
     ],
-    "require": {},
     "autoload": {
         "psr-4": {
           "Barberry\\": "src/"
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8"
+        "phpunit/phpunit": "^4.8",
+        "guzzlehttp/guzzle": "^5.3"
     }
 }
