--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,11 @@
           "Barberry\\": "src/"
         }
     },
+    "require": {
+        "guzzlehttp/guzzle": "^7.4",
+        "ext-json": "*"
+    },
     "require-dev": {
-        "phpunit/phpunit": "^4.8",
-        "guzzlehttp/guzzle": "^5.3"
+        "phpunit/phpunit": "^4.8"
     }
 }
