--- a/composer.json
+++ b/composer.json
@@ -8,16 +8,17 @@
             "email": "mgnatenko@gmail.com"
         }
     ],
-    "autoload": {
-        "psr-4": {
-          "Barberry\\": "src/"
-        }
-    },
     "require": {
         "guzzlehttp/guzzle": "^7.4",
         "ext-json": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^9"
+    },
+    "autoload": {
+        "psr-4": {
+            "Barberry\\": "src/",
+            "Barberry\\IntegrationTests\\": "tests/integration"
+        }
     }
 }
