--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: php
 
 php:
-  - "5.4"
-  - "5.5"
-  - "5.6"
-  - "7.0"
+  - "7.2"
+  - "7.3"
+  - "7.4"
+  - "8.0"
+  - "8.1"
 
 branches:
   only:
@@ -14,4 +15,4 @@ branches:
 before_script:
   - composer install
 
-script: ./tests/run.php
+script: ./tests/unit/run.sh
